--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HairmoSearch</title>
+    <title>Hairmo Search</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,23 @@
   </head>
 
   <body>
+    <header class="nav navbar-fixed-top">
+      <div class="container-fluid">
+        <nav class="nav navbar-nav navbar-left">
+          <h2>Hairmo Search</h2>
+        </nav>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-menu">About</li>
+          <li class="nav-menu">美容師登録</li>
+          <li class="nav-menu">ヘアモ登録</li>
+        </ul>
+      </div>
+    </header>
+    <main>
     <%= yield %>
+    </main>
+    <footer>
+      <p>©Copyright ©Hairmo Search, All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
