--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <%= yield %>
     </main>
     <footer>
-      <p>©Copyright ©Hairmo Search, All Rights Reserved.</p>
+      <p>Copyright ©Hairmo Search, All Rights Reserved.</p>
     </footer>
   </body>
 </html>
