--- a/app/views/hairdressers/registrations/new.html.erb
+++ b/app/views/hairdressers/registrations/new.html.erb
@@ -111,7 +111,9 @@
           </div>
         <% end %>
 
-        <%= render "hairdressers/shared/links" %>
+        　<div class="signup">
+           <%= render "hairdressers/shared/links" %>
+         </div>
       </div>
     </div>
   </div>
