--- a/app/views/hairdressers/show.html.erb
+++ b/app/views/hairdressers/show.html.erb
@@ -91,4 +91,26 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<% @haircatalogs.each do |haircatalog| %>
+		<div class="col-md-3">
+			<div class="haircatalog">
+				<div class="haircatalog-header">
+					<% haircatalog.catalog_tags.each do |tag| %>
+					<span><%= tag.tag_id %></span>
+					<% end %>
+				</div>
+				<div class="haircatalog-image">
+					<%= link_to hair_catalog_path(haircatalog.id) do %>
+					<%= attachment_image_tag(haircatalog, :catalog_image, size: '250x250') %>
+					<% end %>
+				</div>
+				<div class="haircatalog-footer">
+					<span><%= haircatalog.created_at.strftime('%Y/%m/%d') %></span>
+					<span>♡1</span>
+				</div>
+			</div>
+		</div>
+		<% end %>
+	</div>
 </div>
