--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,12 +41,12 @@ a:visited {
 }
 
 header {
-	border-bottom: 10px solid #FCE0DE;
+	border-bottom: 10px solid #EB9996;
 	background-color: #FFFFFF;
 }
 
 header ul {
-	padding: 20px 30px 0 0;
+	padding: 10px 30px 0 0;
 }
 
 .nav-menu {
@@ -103,7 +103,7 @@ main {
 
 footer {
 	height: 50px;
-	background-color: rgba(252, 224, 222, 1);
+	background-color: #EB9996;
 	text-align: center;
 }
 
@@ -208,7 +208,7 @@ footer p {
 .search {
 	height: 150px;
 	margin-bottom: 20px;
-	background-color: rgb(252, 224, 222);
+	background-color: rgba(252, 224, 222, 0.5);
 }
 
 .index-box {
