--- a/app/views/hairdressers/shared/_links.html.erb
+++ b/app/views/hairdressers/shared/_links.html.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "ログイン", new_session_path(resource_name), class: "sign-btn" %><br />
+  <%= link_to "ログイン", new_session_path(resource_name), data: {"turbolinks" => false}, class: "sign-btn" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "新規登録", new_registration_path(resource_name), class: "sign-btn" %><br />
+  <%= link_to "新規登録", new_registration_path(resource_name), data: {"turbolinks" => false}, class: "sign-btn" %><br />
 <% end %>
 <!-- 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
