--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,16 +19,17 @@
           <% if hairdresser_signed_in? %>
           <li class="nav-menu"><%= current_hairdresser.hairdresser_name %></li>
           <li class="nav-menu"><%= link_to "マイページ", hairdresser_path(current_hairdresser.id) %></li>
-          <li class="nav-menu">ヘアモ一覧</li>
+          <li class="nav-menu"><%= link_to "ヘアモ一覧", models_path %></li>
           <li class="nav-menu"><%= link_to "ログアウト", destroy_hairdresser_session_path, method: :delete %></li>
           <% elsif model_signed_in? %>
           <li class="nav-menu"><%= current_model.hairmodel_name %></li>
           <li class="nav-menu"><%= link_to "マイページ", model_path(current_model.id) %></li>
+          <li class="nav-menu"><%= link_to "美容師一覧", hairdressers_path %></li>
           <li class="nav-menu"><%= link_to "ログアウト", destroy_model_session_path, method: :delete %></li>
           <% else %>
-          <li class="nav-menu">About</li>
-          <li class="nav-menu"><%= link_to "美容師ログイン", new_hairdresser_session_path %></li>
-          <li class="nav-menu"><%= link_to "ヘアモログイン", new_model_session_path %></li>
+          <li class="nav-menu"><%= link_to "About", about_path %></li>
+          <li class="nav-menu"><%= link_to "美容師ログイン", new_hairdresser_session_path, data: {"turbolinks" => false} %></li>
+          <li class="nav-menu"><%= link_to "ヘアモログイン", new_model_session_path, data: {"turbolinks" => false} %></li>
           <% end %>
         </ul>
       </div>
