--- a/app/views/hairdressers/show.html.erb
+++ b/app/views/hairdressers/show.html.erb
@@ -111,7 +111,7 @@
 				</div>
 				<div class="haircatalog-footer">
 					<span><%= haircatalog.created_at.strftime('%Y/%m/%d') %></span>
-					<span>♡1</span>
+					<!-- <span>♡1</span> -->
 				</div>
 			</div>
 		</div>
