--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header class="nav navbar-fixed-top">
       <div class="container-fluid">
         <nav class="nav navbar-nav navbar-left">
-          <h2 class="home"><%= link_to "Hairmo Search", root_path %></h2>
+          <h2 class="home"><%= link_to "Hairmo Search.", root_path %></h2>
         </nav>
         <ul class="nav navbar-nav navbar-right">
           <% if hairdresser_signed_in? %>
